2012-06-28 Christian Stith <chstith@ncsu.edu>
	* dmbr_multi_file_report: added. allows for multiple files and directories to be run through dmbr_report_cell_expt, creating a single large report.
	* dmbr_adjust_report.m: added. allows for selection of individual sequences for inclusion in report.
	* dmbr_report_cell_expt.m: added comments. improved functionality and allowed for interaction with dmbr_multi_file_report and dmbr_adjust_report.

2012-06-13  Jeremy Cribb <jcribb@email.unc.edu>
	* dmbr_plot_data.m: displacement plots now show a title with average displacement of last ten data points.

2012-06-13 Christian Stith <chstith@ncsu.edu>
	* dmbr_compute_compliance.m: adapted compliance calculation to approximate compliance for zero-force period
	* dmbr_report_cell_expt.m: added excel output functionality, corrected displacement output

2012-6-11 Christian Stith <chstith@ncsu.edu>
	* dmbr_relaxation_time.m: removed problematic whitespace
	* dmbr_run.m: reimplemented fit function, moved counter to correct position
	* dmbr_report_cell_expt.m:  added.  used dmbr_report to create a new reporting function specifically for the cell pulling experiment as specified by Luke.
	
2011-10-25 Thomas Sayre-McCord <thomassm@email.unc.edu>
	* dmbr_fit.m: added power law fitting to fit options
    	* dmbr_analysis_gui.fig: added "Power Law" as an option in fitting popdown menu

2011-01-18 Thomas Sayre-McCord <thomassm@email.unc.edu>
	* dmbr_compute_compliance: added a method of computing compliance that models a 	bead of radius a as half submerged in the cell. (Currently commented out in 	favor of old method)

2010-11-04 Thomas Sayre-McCord <thomassm@email.unc.edu>
    	* dmbr_direct_moduli: added. computes storage and loss moduli from compliance data, same as direct_moduli
    	* dmbr_analysis_gui: added 'storage and loss moduli' to plotting browser drop down menu